--- a/Example/PhotoSliderDemo/Base.lproj/Main.storyboard
+++ b/Example/PhotoSliderDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E26a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3DJ-Hp-ouc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E33b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3DJ-Hp-ouc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="356" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xv3-z2-YA7">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell01" rowHeight="320" id="3eA-52-wjv">
@@ -84,12 +84,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="xv3-z2-YA7" firstAttribute="top" secondItem="lsQ-Y7-1IV" secondAttribute="bottom" id="2Y9-ZK-qfK"/>
                             <constraint firstAttribute="trailing" secondItem="xv3-z2-YA7" secondAttribute="trailing" id="8bq-mi-ZeT"/>
                             <constraint firstItem="xv3-z2-YA7" firstAttribute="top" secondItem="zPM-9j-EDV" secondAttribute="top" id="nXR-dm-5Iz"/>
                             <constraint firstItem="xv3-z2-YA7" firstAttribute="leading" secondItem="zPM-9j-EDV" secondAttribute="leading" id="qKQ-9P-XrH"/>
                             <constraint firstItem="D7o-SR-fRa" firstAttribute="top" secondItem="xv3-z2-YA7" secondAttribute="bottom" id="qb5-wC-Fru"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="nXR-dm-5Iz"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="xv3-z2-YA7" id="eIF-xc-2Ae"/>
                     </connections>
