--- a/Example/PhotoSliderDemo/Base.lproj/Main.storyboard
+++ b/Example/PhotoSliderDemo/Base.lproj/Main.storyboard
@@ -21,32 +21,32 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell01" rowHeight="320" id="3eA-52-wjv">
-                                        <rect key="frame" x="0.0" y="22" width="600" height="320"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell01" rowHeight="321" id="3eA-52-wjv">
+                                        <rect key="frame" x="0.0" y="22" width="600" height="321"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3eA-52-wjv" id="ej9-1e-v9t">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="320"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="321"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zwH-6x-S9a" userLabel="PhotoSliderCollectionView">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="320"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="321"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="4X0-x6-Kkg">
-                                                        <size key="itemSize" width="320" height="300"/>
+                                                        <size key="itemSize" width="320" height="320"/>
                                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                     </collectionViewFlowLayout>
                                                     <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="hcell" id="FVF-iV-VWR">
-                                                            <rect key="frame" x="0.0" y="10" width="320" height="300"/>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="hcell" id="FVF-iV-VWR" customClass="ImageCollectionViewCell" customModule="PhotoSliderDemo" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="1" width="320" height="320"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                                <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ulp-nm-B0B">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                                                                     </imageView>
                                                                 </subviews>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -57,12 +57,15 @@
                                                                 <constraint firstItem="ulp-nm-B0B" firstAttribute="leading" secondItem="FVF-iV-VWR" secondAttribute="leading" id="lOg-ys-wQx"/>
                                                                 <constraint firstAttribute="trailing" secondItem="ulp-nm-B0B" secondAttribute="trailing" id="mys-8U-VOr"/>
                                                             </constraints>
+                                                            <connections>
+                                                                <outlet property="imageView" destination="ulp-nm-B0B" id="SSi-px-fo8"/>
+                                                            </connections>
                                                         </collectionViewCell>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="hcell02" id="8FM-Ve-ant">
-                                                            <rect key="frame" x="320" y="10" width="320" height="300"/>
+                                                            <rect key="frame" x="320" y="1" width="320" height="320"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                                <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             </view>
