--- a/PhotoSliderDemo/Base.lproj/Main.storyboard
+++ b/PhotoSliderDemo/Base.lproj/Main.storyboard
@@ -86,19 +86,12 @@
                         <constraints>
                             <constraint firstItem="xv3-z2-YA7" firstAttribute="top" secondItem="exh-0y-rKq" secondAttribute="top" id="2Y9-ZK-qfK"/>
                             <constraint firstItem="exh-0y-rKq" firstAttribute="trailing" secondItem="xv3-z2-YA7" secondAttribute="trailing" id="8bq-mi-ZeT"/>
-                            <constraint firstItem="xv3-z2-YA7" firstAttribute="top" secondItem="zPM-9j-EDV" secondAttribute="top" id="nXR-dm-5Iz"/>
                             <constraint firstItem="xv3-z2-YA7" firstAttribute="leading" secondItem="exh-0y-rKq" secondAttribute="leading" id="qKQ-9P-XrH"/>
-                            <constraint firstAttribute="bottom" secondItem="xv3-z2-YA7" secondAttribute="bottom" id="tiw-1y-bp5"/>
+                            <constraint firstItem="exh-0y-rKq" firstAttribute="bottom" secondItem="xv3-z2-YA7" secondAttribute="bottom" id="tiw-1y-bp5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="exh-0y-rKq"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="nXR-dm-5Iz"/>
-                            </mask>
-                        </variation>
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="xv3-z2-YA7" id="eIF-xc-2Ae"/>
                     </connections>
